# routes/file.js
@@ -1,0 +1,9 @@
+const express = require("express");
+const router = express.Router();
+const fileController = require("../controllers/fileController");
+const accessControl = require("../middleware/accessControl");
+const jwtAuth = require("../middleware/jwtAuth");
+
+router.get("/:filename", jwtAuth, accessControl, fileController.getFile);
+
+module.exports = router;
